--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Botão Neon</title>
 </head>
 <body>
-    <a href="#" class="neon">Neon</a>
+
+    <a href="#" class="neon">Neon2</a>
+
 </body>
 </html>
