--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Botão Neon</title>
 </head>
     <style>
-        *{
+    *{
     background: #000;
     text-align: center;
   }
@@ -64,7 +64,7 @@
     </style>
 <body>
 
-    <a href="#" class="neon">Neon2</a>
+    <a href="#" class="neon">Neon</a>
 
 </body>
 </html>
